svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: NodePort
  selector:
    name: django-web
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
