ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
spec:
  rules:
  - host: "django-app"
    http:
      paths:
      - pathType: Prefix
        path: "/main"
        backend:
          service:
            name: django-service
            port:
              number: 80
